--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,34 @@ float:right;
 .active {
    border-bottom: 1px solid #3a3a3a; 
 }
+
+/* hero image */
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#hero-image {
+height: 600px;
+width: 100%;
+background: url('../images/hero-image.webp') no-repeat center center;
+
+
+/* animates zoom effect on loading page */
+
+animation-name: hero-zoom;
+animation-duration: 5s;
+animation-fill-mode: forwards;
+}
+
+/* creates level of zoom for hero img */
+@keyframes hero-zoom {
+    from {
+        transform: scal(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
